--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.2",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
