--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
     "@tailwindcss/postcss": "^4.0.4",
+    "chart.js": "^4.4.8",
     "next": "15.1.2",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "swr": "^2.3.2",
